--- a/crs_gui/ui/crs_application.ui
+++ b/crs_gui/ui/crs_application.ui
@@ -79,56 +79,7 @@
         </widget>
        </item>
        <item>
-        <layout class="QGridLayout" name="gridLayout_2">
-         <item row="2" column="3">
-          <widget class="QPushButton" name="push_button_sm_apply">
-           <property name="text">
-            <string>Apply</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="1">
-          <widget class="QComboBox" name="comboBox"/>
-         </item>
-         <item row="2" column="2">
-          <widget class="QPushButton" name="push_button_sm_query_2">
-           <property name="text">
-            <string>Query</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="0">
-          <widget class="QLabel" name="label_state_machine_actions_2">
-           <property name="text">
-            <string>State Machine Actions</string>
-           </property>
-          </widget>
-         </item>
-         <item row="4" column="2">
-          <widget class="QPushButton" name="push_button_sm_apply_2">
-           <property name="text">
-            <string>Apply</string>
-           </property>
-          </widget>
-         </item>
-         <item row="4" column="0">
-          <widget class="QLabel" name="label_state_machine_actions">
-           <property name="text">
-            <string>Current State</string>
-           </property>
-          </widget>
-         </item>
-         <item row="4" column="1">
-          <widget class="QComboBox" name="combo_box_sm_actions_2"/>
-         </item>
-         <item row="4" column="3">
-          <widget class="QPushButton" name="pushButton">
-           <property name="text">
-            <string>Cancel</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
+        <layout class="QVBoxLayout" name="vertical_layout_sm_interface"/>
        </item>
       </layout>
      </widget>
