--- a/crs_gui/ui/state_machine_interface.ui
+++ b/crs_gui/ui/state_machine_interface.ui
@@ -16,13 +16,6 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QGridLayout" name="gridLayout_3">
-     <item row="2" column="3">
-      <widget class="QPushButton" name="push_button_sm_apply">
-       <property name="text">
-        <string>Apply</string>
-       </property>
-      </widget>
-     </item>
      <item row="2" column="1">
       <widget class="QComboBox" name="combo_box_sm_available_actions"/>
      </item>
@@ -47,13 +40,6 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="2">
-      <widget class="QPushButton" name="push_button_sm_query">
-       <property name="text">
-        <string>Query</string>
-       </property>
-      </widget>
-     </item>
      <item row="4" column="0">
       <widget class="QLabel" name="label_sm_current_state">
        <property name="text">
@@ -65,6 +51,13 @@
       <widget class="QLineEdit" name="line_edit_sm_current_state">
        <property name="readOnly">
         <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="2" colspan="2">
+      <widget class="QPushButton" name="push_button_sm_apply">
+       <property name="text">
+        <string>Apply</string>
        </property>
       </widget>
      </item>
